@startuml
class SudokuCliAdapter {
   + void print(Sudoku sudokuArray)
   + void emptyLine()
   - void printVerticalLine(int columnIndex)
   - void printHorizontalLine(int rowIndex, int sudokuArrayLength)
}

interface SudokuOutputPort {
 + void print(Sudoku sudokuArray)
 + void emptyLine()
}

class PlayDialogService {
	+ void startNewStandardGame(Difficulty dif)
	+ void startNewGame(Sudokusize sudokusize, Difficulty dif)
	+ void startSavedGame(Sudoku loadedSudoku)
    - void startGame()
}

SudokuCliAdapter --|> SudokuOutputPort
PlayDialogService --> SudokuOutputPort
@enduml